🥺fix blurry circles && reponsiveness adjusments

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,4 +7,5 @@
 body {
   @apply bg-background text-white;
   font-family: 'Roboto';
+  overflow-x: hidden;
 }
